samples/_failures_safe/1761487633_f16d41_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_eb35a494.c: In function ‘main’:
./samples/SAFE/__tmp_eb35a494.c:150:21: error: expected declaration or statement at end of input
  150 |                     printf("Matrix Addition Result:\n");
      |                     ^~~~~~
./samples/SAFE/__tmp_eb35a494.c:150:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_eb35a494.c:150:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_eb35a494.c:150:21: error: expected declaration or statement at end of input
